--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".info.Preferences" android:label="@string/preferences"></activity>
         <activity android:name=".info.License" android:theme="@android:style/Theme.Dialog" android:label="@string/license_title">
         </activity>
+        <activity android:name=".info.About" android:theme="@android:style/Theme.Dialog" android:label="@string/about"></activity>
     </application>
 
 </manifest>
